# elysia

./: Cargo.toml
.zed/: tasks.json
src/: context.rs  globals.rs  layout.rs  main.rs  settings.rs
src/components/: Expand.rs  MyAnimatedCarousel.rs  MyButton.rs  MyNetworkImage.rs  MyNewsWidget.rs  MySidebarItem.rs  mod.rs
src/game_providers/: mod.rs
src/game_providers/hoyoplay/: api.rs  mod.rs
src/pages/: Error.rs  Game.rs  Home.rs  mod.rs
src/runners/: mod.rs  proton.rs  wine.rs
src/utils/: filesystem.rs  mod.rs  umu.rs
