[package]
name = "elysia"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
cacache = { version = "13.1.0", features = ["libc", "memmap2", "mmap", "tokio-runtime"], default-features = false }
dioxus = { version = "0.6.3", default-features = false, features = ["macro", "hooks"] }
freya = { git = "https://github.com/marc2332/freya.git", branch = "main" }
freya-elements = { git = "https://github.com/marc2332/freya.git", branch = "main" }
freya-hooks = { git = "https://github.com/marc2332/freya.git", branch = "main" }
freya-router = { git = "https://github.com/marc2332/freya.git", branch = "main" }
libwebp = "0.1.2"
lodepng = "3.12.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["full"] }
